--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,7 +19,7 @@
     verbose="true"
 >
     <testsuites>
-        <testsuite name="Hylk Test Suite">
+        <testsuite name="Hyperlink Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
